--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 commit = True
 current_version = 0.0.3
-files = flask_pw.py
+files = flask_pw/__init__.py
 tag = True
 tag_name = {new_version}
 
