--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,8 @@ include LICENSE
 include MANIFEST.in
 include README.rst
 include requirements.txt
-include flask_pw.py
+
+recursive-include flask_pw *
 
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
